# jsysbox

./: .gitignore  README.md  build  build.sh  build_with_docker.sh  pom.xml  run_main.sh
src/main/clib/: CMakeLists.txt  Makefile  common.cpp  common.h  disk_utils.cpp  jdatetime.cpp  jdatetime.h  jdisk_manager.cpp  jdisk_manager.h  jexception.h  jfile.cpp  jfile.h  jfirewall.cpp  jfirewall.h  jnetwork.cpp  jnetwork.h  jpartition.cpp  jpartition.h  jpartition_manager.cpp  jpartition_manager.h  jsystem.cpp  jsystem.h  partition_utils.cpp  run_cmake.sh
src/main/java/ir/moke/jsysbox/: JSysboxException.java  JniNativeLoader.java  JsonUtils.java  MainClass.java
src/main/java/ir/moke/jsysbox/dev/: Device.java  JDevice.java
src/main/java/ir/moke/jsysbox/device/: DeviceManager.java
src/main/java/ir/moke/jsysbox/disk/: CompactDisk.java  Disk.java  FilesystemType.java  GptType.java  JDiskManager.java  MbrType.java  MountOption.java  PartitionInformation.java  PartitionManager.java  PartitionTable.java  PartitionType.java
src/main/java/ir/moke/jsysbox/file/: JFile.java
src/main/java/ir/moke/jsysbox/firewall/: JFirewall.java  TableDeserializer.java
src/main/java/ir/moke/jsysbox/firewall/config/: ChainDeserializer.java  NFTablesDeserializer.java  NFTablesSerializer.java  RuleDeserializer.java  SetDeserializer.java  TableDeserializer.java
src/main/java/ir/moke/jsysbox/firewall/config/deserializer/: ChainDeserializer.java  NFTablesDeserializer.java  RuleDeserializer.java  SetDeserializer.java
src/main/java/ir/moke/jsysbox/firewall/expression/: AhExpression.java  ArpExpression.java  CompExpression.java  CtExpression.java  DccpExpression.java  DstExpression.java  EspExpression.java  EtherExpression.java  Expression.java  FragExpression.java  HbhExpression.java  IcmpExpression.java  Icmpv6Expression.java  Ip6Expression.java  IpExpression.java  MatchType.java  MetaExpression.java  MhExpression.java  RtExpression.java  SctpExpression.java  TcpExpression.java  UdpExpression.java  UdpLightExpression.java  VlanExpression.java
src/main/java/ir/moke/jsysbox/firewall/model/: AddressFamily.java  Chain.java  ChainHook.java  ChainPolicy.java  ChainType.java  Elem.java  Expr.java  Expression.java  Field.java  FlagType.java  Left.java  Match.java  MatchType.java  MetaInfo.java  Metainfo.java  NFTables.java  Nftable.java  Operation.java  Payload.java  Protocol.java  Protocols.java  Root.java  Rule.java  Set.java  SetPolicy.java  SetType.java  Table.java  TableType.java
src/main/java/ir/moke/jsysbox/firewall/statement/: CounterStatement.java  LimitStatement.java  LogStatement.java  NatStatement.java  RejectStatement.java  Statement.java  VerdictStatement.java
src/main/java/ir/moke/jsysbox/hdd/: FilesystemType.java  HDDPartition.java  JPartition.java  MountOption.java  PartitionTable.java
src/main/java/ir/moke/jsysbox/network/: Ethernet.java  JNetwork.java  Netstat.java  Route.java  RouteFlag.java
src/main/java/ir/moke/jsysbox/system/: CpuInfo.java  CpuStat.java  FileSystemType.java  FilesystemType.java  HDDPartition.java  JSystem.java  LoadAverage.java  MemoryInfo.java  ModInfo.java  MountOption.java  RLimit.java  ThreadInfo.java  Ulimit.java
src/main/java/ir/moke/jsysbox/time/: JDateTime.java
src/test/java/ir/moke/: DeviceTest.java  DiskTest.java  FirewallTest.java  NetworkTest.java  ProcessTest.java  TestUtils.java  UlimitTest.java
src/test/java/ir/moke/test/network/: NetworkTest.java  SystemTest.java
temp/: jfirewall-temp.json
(+6 files in other folders)
